--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "email": "xxxxxx",
-    "password": "xxxxxx",
-    "outdir": "xxxxxx",
-    "git_url": "https://github.com/xxxxx/xxxxx/tree/master/codes_auto/",
+    "email": "xx账号xxxx",
+    "password": "xxx密码xxx",
+    "outdir": "x:/xxxxxx/",
+    "git_url": "https://github.com/xxxxx/xxx仓库名xx/tree/master/codes_auto/",
     "download_start_id": 1, 
     "download_end_id": 10000,
     "refresh": false
