--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "email": "xx账号xxxx",
     "password": "xxx密码xxx",
-    "repo_path": "x:/xxxxxx/",
+    "repo_path": "x:/xxx源码仓库的本地路径xxx/",
     "git_url": "https://github.com/xxxxx/xxx仓库名xx/tree/master/codes_auto/",
     "download_start_id": 1, 
     "download_end_id": 10000,
