--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
     "repo_path": "x:/xxx源码仓库的本地路径xxx/",
     "git_url": "https://github.com/xxxxx/xxx仓库名xx/tree/master/codes_auto/",
     "download_start_id": 1, 
-    "download_end_id": 10000,
-    "refresh": false
+    "download_end_id": 1000000,
+    "refresh": false,
+    "get_recent_submissions_nums": 40
 }
